--- a/app/globals.css
+++ b/app/globals.css
@@ -29,3 +29,17 @@
 .footer a:hover {
   color: #505050;
 }
+
+.responsive-video {
+  max-width: 100%;
+  max-height: 100%;
+  width: auto;
+  height: auto;
+}
+
+@media (max-width: 768px) {
+  .responsive-video {
+    width: 100%;
+    height: auto;
+  }
+}
