--- a/app/globals.css
+++ b/app/globals.css
@@ -1,13 +1,18 @@
-.navegacion {
+
+.header {
   background-color: rgb(227, 227, 227); /* Color de fondo */
-  margin-bottom: 4rem; /* Margen inferior */
   color: #505050;
-  padding: 10px 50px; /* Relleno, 10 arriba y abajo, 5 izquierda y derecha */
-  display: grid; /* Mostrar como grid */
+  padding: 10px 5px; /* Relleno, 10 arriba y abajo, 5 izquierda y derecha */
+  display: flex; /* Mostrar como flex */
   grid-template-columns: repeat(auto-fit, minmax(50px, 1fr)); /* Distribuir en columnas */
   gap: 2rem; /* Espacio entre elementos */
   border-bottom: 1px solid #e1e1e1;
   font-size: 1.2rem;
+  
+  
+  top: 0;
+  width: 100%;
+  
 }
 
 .navegacion a:hover {
@@ -15,15 +20,14 @@
 }
 
 .footer {
-  background-color: rgb(227, 227, 227);
+  background-color: rgb(227, 227, 227); /* Color de fondo */
   color: #505050;
-  display: flex;
-  padding: 1rem;
-  text-align: center;
-  position: fixed;
-  gap: 1rem;
-  bottom: 0;
-  width: 100%;
+  padding: 10px 5px; /* Relleno, 10 arriba y abajo, 5 izquierda y derecha */
+  display: flex; /* Mostrar como grid */
+  grid-template-columns: repeat(auto-fit, minmax(50px, 1fr)); /* Distribuir en columnas */
+  gap: 2rem; /* Espacio entre elementos */
+  border-bottom: 1px solid #e1e1e1;
+  font-size: 1.2rem;
 }
 
 .footer a:hover {
