--- a/app/components/Conversemos.css
+++ b/app/components/Conversemos.css
@@ -1,4 +1,3 @@
-
 .Titulo {
     text-align: center;
     font-size: 35px; /* Puedes ajustar el tamaño de la fuente según tus necesidades */
@@ -7,6 +6,25 @@
     margin-bottom: 25px;
 }
 
-.Card {
-    background-color: #f9f9f9;
+.card {
+    display: flex;
+    justify-content: center;
+}
+
+.texto {
+    position: absolute;
+    top: 2vh;
+    left: 2vw;
+    color: white;
+    font-Size: 1.8vw;
+}
+
+@media screen and (max-width: 768px) {
+    .Titulo {
+        font-size: 30px;
+    }
+    .texto {
+        font-size: 3vw;
+    }
+    
 }
