--- a/app/globals.css
+++ b/app/globals.css
@@ -1,35 +1,118 @@
-.fondo {
-  background-color: rgb(237, 237, 237);
+/* estilos del carrusel */
+@import "slick-carousel/slick/slick.css";
+@import "slick-carousel/slick/slick-theme.css";
+
+:root {
+  --background: #e0bd94;
+  --foreground: #ebb678;
 }
 
-.navegacion a:hover {
-  color: #000;
+body {
+  background-color: var(--background);
 }
 
-.footer a:hover {
-  color: #505050;
+/* Anuncios */
+
+.container-Anuncios {
+  margin-left: 1.5rem;
+  margin-right: 1.5rem; 
 }
 
-.section1 {
-  background-color: #f0f8ff; /* Color de fondo para la primera sección */
-  padding: 50px;
-  text-align: center;
+.carousel-container {
+  width: 100%;
+  max-width: 1200px;
+  aspect-ratio: 16 / 9;
+  margin: 0 auto;
 }
 
-.section2 {
-  background-color: #bfc0d8; /* Color de fondo para la segunda sección */
-  padding: 50px;
-  text-align: center;
+.carousel-item {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
 }
 
-.section3 {
-  padding: 50px;
-  text-align: center;
+.carousel-image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
-.section4 {
-  background-color: #bfc0d8; /* Color de fondo para la segunda sección */
-  padding: 50px;
-  text-align: center;
+
+/*Bienvenida*/
+
+.container-bienvenida {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  border: black 1px solid;
 }
 
+.grid-container {
+  display: grid;
+  gap: 1.5rem;
+  grid-template-columns: repeat(1, 1fr); /* 1 columna por defecto */
+}
+
+@media (min-width: 600px) {
+  .grid-container {
+    grid-template-columns: repeat(2, 1fr); /* 2 columnas para pantallas medianas */
+  }
+}
+
+@media (min-width: 900px) {
+  .grid-container {
+    grid-template-columns: repeat(4, 1fr); /* 4 columnas para pantallas grandes */
+  }
+}
+
+.card {
+  background: #c59864; /* Color de fondo de las tarjetas */
+  color: black; /* Color del texto */
+  text-align: center; /* Centrar el texto */
+  padding: 0.5rem; /* Espaciado interno reducido */
+  border-radius: 10px; /* Bordes redondeados */
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Sombra */
+  font-size: 0.875rem; /* Tamaño de fuente más pequeño */
+  width: 75%; /* Asegura que las tarjetas ocupen todo el ancho disponible */
+  max-width: 100%; /* Ancho máximo reducido */
+  margin: 0 auto; /* Centra las tarjetas */
+}
+
+/* Transmision */
+
+.container-Transmision{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+/* Consejeria */
+
+.container-Consejeria{
+  justify-content: center;
+  align-items: center;
+}
+
+.titulo{
+  text-align: start;
+  margin-left: 1.3rem;
+}
+
+.imagen-contenedor {
+  width: 100%; /* Asegura que la imagen ocupe todo el ancho del contenedor */
+  height: 100%; /* Asegura que la imagen ocupe todo el alto del contenedor */
+  object-fit: cover; /* Ajusta la imagen al contenedor sin deformarla */
+}
+
+/* nuestro_colegio */
+
+.container-nuestro_colegio{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+}
